# DSR_Python_Intro

./: README.md  main.py  pyproject.toml  requirements.txt
data/: README.md  berlin_bikes.csv  download_data.py
final_notebooks/01_python_refresher/: 02_comprehensions_and_generators.ipynb  03_functions_args_decorators.ipynb  04_oop_and_pythonic_idioms.ipynb
final_notebooks/02_numpy/: 01_array_basics.ipynb  02_indexing_and_slicing.ipynb  03_broadcasting.ipynb  04_ufuncs_and_performance.ipynb
final_notebooks/03_pandas_basics/: 01_series_and_dataframe.ipynb  02_loading_and_exploring.ipynb  03_indexing_and_filtering.ipynb  04_missing_values_and_dtypes.ipynb
final_notebooks/04_pandas_advanced/: 01_groupby_and_aggregation.ipynb  02_merge_join_reshape.ipynb  03_apply_map_pipe.ipynb  04_timeseries_and_performance.ipynb
final_notebooks/05_capstone/: 01_capstone_exercise.ipynb
live_notebooks/01_python_refresher/: 01_data_structures.ipynb  02_comprehensions_and_generators.ipynb  03_functions_args_decorators.ipynb  04_oop_and_pythonic_idioms.ipynb
live_notebooks/02_numpy/: 01_array_basics.ipynb  02_indexing_and_slicing.ipynb  03_broadcasting.ipynb  04_ufuncs_and_performance.ipynb
live_notebooks/03_pandas_basics/: 01_series_and_dataframe.ipynb  02_loading_and_exploring.ipynb  03_indexing_and_filtering.ipynb  04_missing_values_and_dtypes.ipynb
live_notebooks/04_pandas_advanced/: 01_groupby_and_aggregation.ipynb  02_merge_join_reshape.ipynb  03_apply_map_pipe.ipynb  04_timeseries_and_performance.ipynb
live_notebooks/05_capstone/: 01_capstone_exercise.ipynb
