[project]
name = "dsr-python-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "notebook>=7.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "requests>=2.31",
    "scipy>=1.11",
    "seaborn>=0.12",
]
